--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
 
     <div>
 
-<a href="<iframe width="951" height="535" src="https://www.youtube.com/embed/XzyiXwrGiRA" title="Masha e o Urso 👱‍♀️🐻💥 Novo episódio 2024 🍯 Dia do Mel 🐝 Compilação para crianças" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
-<img src=""
+<a href="https://www.youtube.com/watch?v=VSfoV_xrh78"
+<img src="https://img.youtube.com/vi/VSfoV_xrh78/maxresdefault.jpg"
 
-</a>
+</a href="https://www.youtube.com/watch?v=a8r-_nOpcMU"
+<img src="https://img.youtube.com/vi/a8r-_nOpcMU/maxresdefault.jpg"
 
+<a href="https://www.youtube.com/watch?v=ScpECo-JQlg"
+<img src="https://img.youtube.com/vi/ScpECo-JQlg/maxresdefault.jpg"
 
+<a href="https://www.youtube.com/watch?v=2r4vBwV7Xd0"
+<img src="https://img.youtube.com/vi/2r4vBwV7Xd0/maxresdefault.jpg"
 
 
     </div>
